--- a/public/500.html
+++ b/public/500.html
@@ -17,7 +17,7 @@
     bottom: 0;
     left: 0;
     min-height:100%;
-    background: url("image/water_ships_lonely_depressing_desktop_1920x1080_hd-wallpaper-1130568.jpg") no-repeat right;
+    background: url("/image/water_ships_lonely_depressing_desktop_1920x1080_hd-wallpaper-1130568.jpg") no-repeat right;
     background-size: cover;
     color: #2E2F30;
     text-align: center;
@@ -31,7 +31,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background: url("image/body-bg1.png");
+    background: url("/image/body-bg1.png");
   }
 
   div.dialog {
