--- a/public/422.html
+++ b/public/422.html
@@ -17,7 +17,7 @@
     bottom: 0;
     left: 0;
     min-height:100%;
-    background: url("/image/water_ships_lonely_depressing_desktop_1920x1080_hd-wallpaper-1130568.jpg") no-repeat right;
+    background: url("/image/water_ships_lonely_depressing_desktop_1920x1080_hd-wallpaper-1130568.jpg") no-repeat center center;
     background-size: cover;
     color: #2E2F30;
     text-align: center;
